[gd_scene load_steps=36 format=2]

[ext_resource path="res://Enemies/SlimeOrange/oranjeslime.gd" type="Script" id=1]
[ext_resource path="res://Enemies/SlimeOrange/OrangeSlime.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 255, 205 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 255, 0, 255, 205 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 0, 255, 205 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 765, 0, 255, 205 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 255, 205 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 205, 255, 205 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 255, 205, 255, 205 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 205, 255, 205 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 765, 205, 255, 205 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 205, 255, 205 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 410, 255, 205 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 255, 410, 255, 205 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 410, 255, 205 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 765, 410, 255, 205 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 410, 255, 205 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 615, 255, 205 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 255, 615, 255, 205 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 615, 255, 205 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 765, 615, 255, 205 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 615, 255, 205 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 820, 255, 205 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 255, 820, 255, 205 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 820, 255, 205 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 765, 820, 255, 205 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 820, 255, 205 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1025, 255, 205 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 255, 1025, 255, 205 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 510, 1025, 255, 205 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 765, 1025, 255, 205 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1020, 1025, 255, 205 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=44]
radius = 55.9999
height = 64.0

[sub_resource type="CapsuleShape2D" id=76]
radius = 45.0
height = 74.0

[node name="oranjeslime" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 32
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "Run"
frame = 15
playing = true

[node name="DamageZone" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
rotation = 1.5708
shape = SubResource( 44 )

[node name="body" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 76 )

[node name="RayCastWest" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -72, 0 )
collision_mask = 6

[node name="RayCastEast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 72, 0 )
collision_mask = 6

[node name="RayCastSouth" type="RayCast2D" parent="."]
enabled = true
collision_mask = 6

[connection signal="Die" from="." to="." method="_on_oranjeslime_Die"]
[connection signal="body_entered" from="DamageZone" to="." method="_on_DamageZone_body_entered"]
